fixed bug with the white right side on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,10 @@
     }
   }
 }
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
 body {
   min-height: 100vh;
   margin: 0;
